<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShakeBattle</string>
    <string name="title_activity_title">振るカウント</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_attack">カウントアタック</string>
    <string name="time_attack">タイムアタック</string>
    <string name="guest">対戦に参加する</string>
    <string name="title">振るカウント</string>
    <string name="title_activity_participation_wait">ParticipationWaitActivity</string>
    <string name="title_activity_time_attack">TimeAttackActivity</string>
    <string name="time_limit">残り:</string>
    <string name="during_the_competition">と対戦中</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="win">WIN</string>
    <string name="unit_count">回</string>
    <string name="result_of_opponent">相手の結果</string>
    <string name="go_to_title">タイトル</string>
    <string name="title_activity_opponent_search">OpponentSearchActivity</string>
    <string name="opponents_list">対戦相手一覧</string>
    <string name="title_activity_count_attack">CountAttackActivity</string>
    <string name="goal">目標:</string>
    <string name="elapsed_time">経過時間:</string>
    <string name="count_select">回数選択</string>
    <string name="count_50">50回</string>
    <string name="count_100">100回</string>
    <string name="count_2000">2000回</string>
    <string name="back">戻る</string>
    <string name="time_select">時間選択</string>
    <string name="time_10sec">10秒</string>
    <string name="time_20sec">20秒</string>
    <string name="time_30sec">30秒</string>
    <string name="unit_time">秒</string>
    <string name="title_activity_wait_opponent">WaitOpponentActivity</string>
    <string name="retry_discover">再検索</string>
    <string name="searching_for_opponent">対戦相手を検索中...</string>
    <string name="game_result">Game Result</string>
    <string name="shake_was_number_of_times">振った回数</string>


</resources>
