<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jp.ac.it_college.std.s13012.shakebattle.CountAttackActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        >

    <TextView
        android:id="@+id/label_goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/goal"
        />
    
    <TextView
        android:id="@+id/label_goal_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/unit_count"
        />

    <TextView
        android:id="@+id/label_elapsed_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/label_goal"
        android:textSize="20sp"
        android:text="@string/elapsed_time"
        />

    <SurfaceView
        android:id="@+id/label_elapsed_time_count"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_time"
        android:textSize="20sp"
        />

    </LinearLayout>


    <TextView
        android:id="@+id/name_of_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="xxx"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/name_of_person"
        android:layout_toRightOf="@id/name_of_person"
        android:textSize="20sp"
        android:text="@string/during_the_competition"
        />

    <TextView
        android:id="@+id/current_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:layout_centerInParent="true"
        android:text="0"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/current_count"
        android:gravity="center"
        android:textSize="40sp"
        android:visibility="gone"
        />

</RelativeLayout>
