<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jp.ac.it_college.std.s13012.shakebattle.TimeAttackActivity">

    <TextView
        android:id="@+id/label_time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/time_limit"
        />

    <TextView
        android:id="@+id/remaining_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_time_limit"
        android:text="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/remaining_time"
        android:layout_alignTop="@id/remaining_time"
        android:text="@string/unit_time"
        />

    <TextView
        android:id="@+id/name_of_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_time_limit"
        android:layout_marginTop="10dp"
        android:text="xxx"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/name_of_person"
        android:text="@string/during_the_competition"
        android:layout_alignTop="@id/name_of_person"
        />

    <TextView
        android:id="@+id/current_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_of_person"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="52sp"
        android:text="0"
        />

</RelativeLayout>
